--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
             <div class="card mb-3">
               <div class="card-header">
                 <i class="fa fa-pencil"></i> Solver Form
-                <a id="belgium-sample-loader" href="#">(Load Sample)</i></a>
+                <a id="ceara-sample-loader" href="#">(Load Sample)</i></a>
               </div>
               <div class="card-body">
                 <div id="alert-area"></div>
